Update Glossary and link terms

--- a/101/ExamineDataChunking.ipynb
+++ b/101/ExamineDataChunking.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# How to Examine a Stored Dataset's Chunk Shapes\n",
     "\n",
-    "The objective of this notebook is to learn how to examine a stored dataset and understand if it is chunked and, if so, what its chunk shape is.\n",
+    "The objective of this notebook is to learn how to examine a stored dataset and understand if it is chunked and, if so, what its \"[**chunk shape**](../back/Glossary.md#term-Chunk-shape)\" is.\n",
     "To do this, we will utilize an existing dataset from the HyTEST OSN, take a guided tour of the data, and show how to figure out its chunk shape."
    ]
   },
@@ -152,7 +152,7 @@
     "In terms of chunking, this is where it gets interesting.\n",
     "If you thoroughly looked at the rich HTML output, you may have noticed that there is no reference to chunking anywhere.\n",
     "Occasionally, some datasets will include some info in their \"Attributes\" that potentially indicate how the data is chunked.\n",
-    "For example, some may include a `_ChunkSizes` that gives the \"**chunk sizes**\" of the data, expressed as a tuple to match the dimensions.\n",
+    "For example, some may include a `_ChunkSizes` that gives the chunk shape of the data, expressed as a tuple to match the dimensions.\n",
     "However, we should be skeptical of any information on how the data is chunked in the \"Attributes\".\n",
     "Virtually anything can be set as an attribute on the dataset, and it does not affect the internal structure of the dataset **AT ALL**.\n",
     "Therefore, we need to directly access the data in a way that returns the true chunk shape of the stored dataset.\n",
@@ -176,9 +176,9 @@
    "source": [
     "From here we can see two keys dealing with chunks: `'chunks'` and `'preferred_chunks'`.\n",
     "While not identical entries, both contain the same information of how the data is chunked.\n",
-    "The difference between the two is `'chunks'` is the actual chunk size of the chunks stored on disk (what is commonly termed \"**stored chunks**\"), while `'preferred_chunks'` is the chunk size that the engine used to open the dataset chose.\n",
+    "The difference between the two is `'chunks'` is the actual chunk shape of the chunks stored on disk (what is commonly termed \"[**stored chunks**](../back/Glossary.md#term-Stored-chunks)\"), while `'preferred_chunks'` is the chunk shape that the engine used to open the dataset chose.\n",
     "Generally, these are the same, but they may be different if the engine you use has not been set to equate them.\n",
-    "Therefore, our data has stored chunk sizes of `{'time': 72, 'lat': 354, 'lon': 354}`."
+    "Therefore, our data has a stored chunk shape of `{'time': 72, 'lat': 354, 'lon': 354}`."
    ]
   },
   {
@@ -187,13 +187,13 @@
    "source": [
     "## Getting the Chunking When Reading Data\n",
     "\n",
-    "While checking the \"encoding\" of the variable can tell you what the dataset's stored chunk size is, it is typically easier to do this in one step when you open the dataset.\n",
+    "While checking the \"encoding\" of the variable can tell you what the dataset's stored chunk shape is, it is typically easier to do this in one step when you open the dataset.\n",
     "To do this, all we need is to add a another keyword when we open the dataset with `xarray`: `chunks={}`.\n",
     "As per the [`xarray.open_dataset` documentation](https://docs.xarray.dev/en/stable/generated/xarray.open_dataset.html): \n",
     "\n",
     "> `chunks={}` loads the data with `dask` using the engine’s preferred chunk size, generally identical to the format’s chunk size.\n",
     "\n",
-    "In other words, using `chunks={}` will load the data with chunk sizes equal to `'preferred_chunks'`.\n",
+    "In other words, using `chunks={}` will load the data with chunk shape equal to `'preferred_chunks'`.\n",
     "Let's check this out and see how our data looks when we include this keyword when opening."
    ]
   },
@@ -228,23 +228,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see the data is chunked into chunks of shape `(72, 354, 354)` with a chunk memory size of ~70 MiB.\n",
+    "As we can see the data is chunked into chunks of shape `(72, 354, 354)` with a \"[**chunk size**](../back/Glossary.md#term-Chunk-size) of ~70 MiB.\n",
     "This is exactly what we saw when looking at the encoding.\n",
-    "So, this additional keyword worked as expected and gives us a standard way to open chunked datasets using the stored chunk size as our chunk size!\n",
+    "So, this additional keyword worked as expected and gives us a standard way to open chunked datasets using the stored chunk shape as our chunk shape!\n",
     "\n",
-    "## Changing the Chunk Size\n",
+    "## Changing the Chunk Shape and Size\n",
     "\n",
-    "Now that we know our stored chunk sizes or how to find them, they may not always be the optimal choice for performing analysis.\n",
-    "For example, [`zarr` recommends stored chunks of at least 1 MB uncompressed](https://zarr.readthedocs.io/en/stable/tutorial.html#chunk-size-and-shape) as they give better performance.\n",
-    "However, [`dask` recommends chunks between 10 MB and 1 GB for computations](https://docs.dask.org/en/stable/array-chunks.html#specifying-chunk-shapes), depending on the availability of RAM and the duration of computations.\n",
-    "Therefore, our stored chunk sizes may not be large enough for optimal computations.\n",
+    "Now that we know our stored chunk shape and size or how to find them, they may not always be the optimal choice for performing analysis.\n",
+    "For example, [`zarr` recommends a stored chunk size of at least 1 MB uncompressed](https://zarr.readthedocs.io/en/stable/tutorial.html#chunk-size-and-shape) as they give better performance.\n",
+    "However, [`dask` recommends chunk sizes between 10 MB and 1 GB for computations](https://docs.dask.org/en/stable/array-chunks.html#specifying-chunk-shapes), depending on the availability of RAM and the duration of computations.\n",
+    "Therefore, our stored chunk size may not be large enough for optimal computations.\n",
     "Thankfully, stored chunks do not need to be the same size as those we use for our computations.\n",
     "In other words, we can group multiple smaller stored chunks together when performing our computations.\n",
-    "`xarray` makes this easy by allowing us to adjust the chunk sizes, either as we load the data or after.\n",
+    "`xarray` makes this easy by allowing us to adjust the chunk shape and size, either as we load the data or after.\n",
     "\n",
-    "Let's show how this works by increasing our chunks of the minimum monthly temperature to be ~500 MiB.\n",
-    "To do so when reading in the data, all we need to do is actually specify the chunk sizes to `chunks`.\n",
-    "For our example, let's do chunks of size: `{'time': 150, 'lat': 310, 'lon': 1405}`."
+    "Let's show how this works by increasing our chunks of the minimum monthly temperature to a size of ~500 MiB.\n",
+    "To do so when reading in the data, all we need to do is actually specify the chunk shape to `chunks`.\n",
+    "For our example, let's do chunks of shape: `{'time': 150, 'lat': 310, 'lon': 1405}`."
    ]
   },
   {
@@ -254,7 +254,6 @@
    "outputs": [],
    "source": [
     "# Note we drop the other variables and select tmn when reading the data\n",
-    "# as to only select it\n",
     "ds_tmn = xr.open_dataset(file, engine='zarr',\n",
     "                         chunks={'time': 150, 'lat': 310, 'lon': 1405},\n",
     "                         drop_variables=['ppt', 'time_bnds', 'tmx', 'crs']).tmn\n",
@@ -266,7 +265,7 @@
    "metadata": {},
    "source": [
     "Nice!\n",
-    "As we can see, the chunk sizes are now reflected in data description with about the right memory footprint we wanted.\n",
+    "As we can see, the chunk shape is now reflected in data description with about the right chunk size we wanted.\n",
     "However, we did get a warning indicating that:\n",
     "\n",
     "```\n",
@@ -274,12 +273,12 @@
     "```\n",
     "\n",
     "```{important}\n",
-    "This warning is telling us that the chunk size we have chosen is not a multiple (or grouping) of the the stored chunks, and if we really want this chunk size, we should rechunk.\n",
+    "This warning is telling us that the chunk shape we have chosen is not a multiple (or grouping) of the the stored chunks, and if we really want this chunk shape, we should rechunk.\n",
     "```\n",
     "\n",
-    "Oops, as we are not attached to this chunk size nor wanting to rechunk the data (see the [Why (re)Chunk Data? notebook](WhyChunk.ipynb) for reasons why you might), we need to select a chunk size that is a **multiple** of the stored chunks.\n",
+    "Oops, as we are not attached to this chunk shape nor wanting to rechunk the data (see the [Why (re)Chunk Data? notebook](WhyChunk.ipynb) for reasons why you might), we need to select a chunk shape that is a **multiple** of the stored chunks.\n",
     "This time, let's try: `{'time': 72*2, 'lat': 354*2, 'lon': 354*2}`.\n",
-    "This should increase our memory footprint by a factor of 8 ($2^3 = 8$).\n",
+    "This should increase our chunk size by a factor of 8 ($2^3 = 8$).\n",
     "Close to the ~500 MiB we are wanting."
    ]
   },
@@ -299,9 +298,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look at that, no warning and close to the memory footprint we wanted!\n",
+    "Look at that, no warning and close to the chunk size we wanted!\n",
     "\n",
-    "As a final note, we selected our chunk sizes while reading in the data.\n",
+    "As a final note, we selected our chunk shape while reading in the data.\n",
     "However, we could change them after using [`xarray.Dataset.chunk()`](https://docs.xarray.dev/en/stable/generated/xarray.Dataset.chunk.html)."
    ]
   },
@@ -318,10 +317,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{tip}\n",
-    "We do not recommend using this method as you will not get the same warning notifying you that the chosen chunk sizes do not match a multiple of the stored chunk sizes.\n",
-    "Therefore, if you choose a non-multiple chunk size you could slow down your whole workflow as the data will have to be rechunked to meet your requested chunk size.\n",
-    "```"
+    "`````{admonition} Not Recommended\n",
+    ":class: warning\n",
+    "We do not recommend using this method as you will not get the same warning notifying you that the chosen chunk shape does not match a multiple of the stored chunk shape.\n",
+    "Therefore, if you choose a non-multiple chunk shape you could slow down your whole workflow as the data will have to be rechunked to meet your requested chunk shape.\n",
+    "`````"
    ]
   }
  ],
