--- a/101/WhyChunk.ipynb
+++ b/101/WhyChunk.ipynb
@@ -20,11 +20,11 @@
     "## What is chunking?\n",
     "\n",
     "Since modern computers were invented, there have existed datasets that were too large to fully read into computer memory.\n",
-    "These datasets have come to be known as \"**larger-than-memory**\" datasets.\n",
+    "These datasets have come to be known as \"[**larger-than-memory**](../back/Glossary.md#term-Larger-than-memory)\" datasets.\n",
     "While these datasets may be larger than memory, we will still want to access them and perform analysis on the data.\n",
     "This where chunking comes in.\n",
-    "\"**Chunking**\" is the process of breaking down large amounts of data into smaller, more manageable pieces.\n",
-    "By breaking the data down into \"**chunks**\", it allows for us to work with the chunks of the larger overall dataset using a structured approach without exceeding our machines available memory.\n",
+    "\"[**Chunking**](../back/Glossary.md#term-Chunking)\" is the process of breaking down large amounts of data into smaller, more manageable pieces.\n",
+    "By breaking the data down into \"[**chunks**](../back/Glossary.md#term-Chunk)\", it allows for us to work with the chunks of the larger overall dataset using a structured approach without exceeding our machines available memory.\n",
     "Additionally, proper chunking can allow for faster retrieval and analysis when we only need to work with part of the dataset.\n",
     "\n",
     "```{note}\n",
@@ -108,7 +108,7 @@
     "\n",
     "In either mapping, `r3c5` (for example) still fetches the same value.\n",
     "For a single value, this is not a problem.\n",
-    "The array is still indexed/addressed in the same way as far as the user is concerned, but the memory organization strategy determines how nearby an 'adjacent' index is.\n",
+    "The array is still indexed/addressed in the same way as far as the user is concerned, but the memory organization strategy determines how nearby an \"adjacent\" index is.\n",
     "This becomes important when trying to get a subsection of the data.\n",
     "For example, if the array is in row-major order and we select say `r0`, this is fast for the computer as all the data is adjacent.\n",
     "However, if we wanted `c0`, then the computer has to access every 10th value in memory, which as you can imagine is not as efficient.\n",
@@ -133,7 +133,7 @@
     "\n",
     "By now, we have hopefully answered both of the question about \"what is data chunking?\" and \"why should I care?\".\n",
     "To really drive home the idea, let's apply the above theoretical example using [`dask`](https://docs.dask.org/en/stable/).\n",
-    "In this case, we will generate a square array of ones to test how different \"**chunk shapes**\" compare."
+    "In this case, we will generate a square array of ones to test how different \"[**chunk shapes**](../back/Glossary.md#term-Chunk-shape)\" compare."
    ]
   },
   {
@@ -152,7 +152,7 @@
     "### Chunk by Rows\n",
     "\n",
     "First, let's start with the square array chunked by rows.\n",
-    "We'll do a 50,000x50,000 array as this is about 19 GiB, which is larger than the typical memory availablity of a laptop.\n",
+    "We'll do a 50,625x50,625 array as this is about 19 GiB, which is larger than the typical memory availablity of a laptop.\n",
     "The nice thing about `dask` is that we can see how big our array and chunks are in the output. "
    ]
   },
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vals = da.ones(shape=(5e4, 5e4), chunks=(1, 5e4))\n",
+    "vals = da.ones(shape=(50625, 50625), chunks=(1, 50625))\n",
     "vals"
    ]
   },
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vals = da.ones(shape=(5e4, 5e4), chunks=(5e4, 1))\n",
+    "vals = da.ones(shape=(50625, 50625), chunks=(50625, 1))\n",
     "vals"
    ]
   },
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vals = da.ones(shape=(5e4, 5e4), chunks=(225, 225))\n",
+    "vals = da.ones(shape=(50625, 50625), chunks=(225, 225))\n",
     "vals"
    ]
   },
@@ -300,7 +300,7 @@
     "The primary pro, as we hopefully conveyed with our previous example, is that well chunked data substantially speeds up any analysis that favors that chunk shape.\n",
     "However, this becomes a con when you change your analysis to one that favors a new chunk shape.\n",
     "In other words, data that is well-organized to optimize one kind of analysis may not suit another kind of analysis on the same data.\n",
-    "While not a problem for our example here, changing the chunk shape (known as \"**rechunking**\") on an established dataset is time-consuming, and it produces a separate copy of the dataset, increasing storage requirements.\n",
+    "While not a problem for our example here, changing the chunk shape (known as \"[**rechunking**](../back/Glossary.md#term-Rechunking)\" on an established dataset is time-consuming, and it produces a separate copy of the dataset, increasing storage requirements.\n",
     "The space commitment can be substantial if a complex dataset needs to be organized for many different analyses.\n",
     "If our example above used unique values that we wanted to keep as we changed chunking, this would have meant that rather than having a single ~19 GiB dataset, we would have needed to keep all three, tripling our storage to almost 60 GiB.\n",
     "Therefore, selecting an appropriate chunk shape is critical when generating widely used datasets."
