Update reasons for chunking

--- a/101/WhyChunk.ipynb
+++ b/101/WhyChunk.ipynb
@@ -40,7 +40,12 @@
    "source": [
     "## Why should I care?\n",
     "\n",
-    "The main reason you should care about chunking is that proper chunking can allow for faster retrieval and analysis of the dataset.\n",
+    "The simple reason you should care is that you are working with dataset that is larger-than-memory.\n",
+    "It has to be divided in some way so that only those parts of the data being actively worked on are loaded.\n",
+    "Otherwise, your machine would crash.\n",
+    "This has benefits when it comes to parallel algorithms.\n",
+    "If work can be performed on independent chunks, it is easy to set it up such that separate parallel workers each work on a chunk of the data simultaneously. \n",
+    "Therefore, proper chunking can allow for faster retrieval and analysis of the dataset.\n",
     "Even datasets that are small enough to fit into memory can still technically be chunked.\n",
     "So even proper chunking of them can potentially speed up retrieval and analysis.\n",
     "To help you understand this, let's begin with a simple example.\n",
