Added info on coords in chunks

--- a/101/ExamineDataChunking.ipynb
+++ b/101/ExamineDataChunking.ipynb
@@ -26,16 +26,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Accessing the Dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Accessing the Dataset\n",
+    "\n",
     "Before we can open at the dataset, we must first get a mapper that will easily allow for `xarray` to open the dataset.\n",
     "To do this, we will use [`fsspec`](https://filesystem-spec.readthedocs.io/en/latest/) to perform an anonymous read from an endpoints outside of S3, using the S3 API (i.e., the HyTEST OSN).\n",
     "This requires us to set up an S3 file system and feed it the endpoint url.\n",
@@ -231,6 +227,12 @@
     "As we can see the data is chunked into chunks of shape `(72, 354, 354)` with a \"[**chunk size**](../back/Glossary.md#term-Chunk-size) of ~70 MiB.\n",
     "This is exactly what we saw when looking at the encoding.\n",
     "So, this additional keyword worked as expected and gives us a standard way to open chunked datasets using the stored chunk shape as our chunk shape!\n",
+    "\n",
+    "Note that the coordinate variables themselves (`lat`, `lon`, and `time`) are stored as single unchunked arrays of data.\n",
+    "Recall that these are used to translate a coordinate value into the index of the corresponding array.\n",
+    "Therefore, these coordinate arrays will always be needed in their entirity.\n",
+    "So, they are included in each chunk such that they read whenever a chunk is read, and they do not affect how the data representing the data variables is chunked.  \n",
+    "\n",
     "\n",
     "## Changing the Chunk Shape and Size\n",
     "\n",
