Remove dask.array import

--- a/101/BasicsShapeSize.ipynb
+++ b/101/BasicsShapeSize.ipynb
@@ -21,8 +21,7 @@
    "outputs": [],
    "source": [
     "import xarray as xr\n",
-    "import fsspec\n",
-    "import dask.array as da"
+    "import fsspec"
    ]
   },
   {
@@ -175,7 +174,7 @@
    "metadata": {},
    "source": [
     "It is important to note that we have just over a round number of chunks.\n",
-    "Having `9.06` longigutde chunks means we will have 10 chunks in practice, but that last one is not full-sized.\n",
+    "Having `9.06` longitude chunks means we will have 10 chunks in practice, but that last one is not full-sized.\n",
     "In this case, this means that the last chunk in the given dimension will be extremely thin. \n",
     "\n",
     "In the case of the latitude chunks, the extra `0.006` of a chunk means that the last, fractional chunk is only one `lat` observation.\n",
@@ -334,7 +333,7 @@
     "total_bytes = chunks['time'] * chunks['lat'] * chunks['lon'] * bytes_per_value\n",
     "kiB = total_bytes / (2 ** 10)\n",
     "MiB = kiB / (2 ** 10)\n",
-    "print(f\"TMN chunk size: {total_bytes} ({kiB=:.2e}) ({MiB=:.2e})\")"
+    "print(f\"TMN chunk size: {total_bytes} ({kiB=:.2f}) ({MiB=:.2f})\")"
    ]
   },
   {
