typo and style fixes

--- a/101/ExamineDataChunking.ipynb
+++ b/101/ExamineDataChunking.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# How to Examine a Stored Dataset's Chunk Shapes\n",
+    "# How to Examine a Stored Dataset's Chunk Shape\n",
     "\n",
     "The objective of this notebook is to learn how to examine a stored dataset and understand if it is chunked and, if so, what its \"[**chunk shape**](../back/Glossary.md#term-Chunk-shape)\" is.\n",
     "To do this, we will utilize an existing dataset from the HyTEST OSN, take a guided tour of the data, and show how to figure out its chunk shape."
