--- a/101/Rechunking.ipynb
+++ b/101/Rechunking.ipynb
@@ -2,11 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "118dcc03-518d-4ce8-9a72-1f80543af8ac",
+   "id": "60a93f80-def8-48cc-b31f-65772a2bdc12",
    "metadata": {},
    "source": [
-    "# Rechunking\n",
-    "\n",
+    "# Rechunking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "169ec966-1ad9-489d-92b9-89b8e2240bce",
+   "metadata": {},
+   "source": [
+    "::::{margin}\n",
+    ":::{note}\n",
+    "This notebook was inspired by the material in [this notebook by James McCreight](https://github.com/NCAR/rechunk_retro_nwm_v21/blob/main/notebooks/usage_example_rerechunk_chrtout.ipynb), and [the Rechunker Tutorial](https://rechunker.readthedocs.io/en/latest/tutorial.html).\n",
+    ":::\n",
+    "::::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "507993a5-5380-47db-b9eb-3347ec6ee28b",
+   "metadata": {},
+   "source": [
     "The goal of this notebook is to learn how to \"[**rechunk**](../back/Glossary.md#term-Rechunking)\" data.\n",
     "This will be a culmination of all the [previous introductory material](index.md) where we will:\n",
     "\n",
@@ -14,11 +32,7 @@
     "2. [Check the current chunking](ExamineDataChunking.ipynb)\n",
     "3. [Choose a new chunk shape](BasicsShapeSize.ipynb)\n",
     "4. Rechunk using [`Rechunker`](https://rechunker.readthedocs.io/en/latest/index.html)\n",
-    "5. [Confirm the proper creation of the `zarr` store by `Rechunker`](WriteChunkedFiles.ipynb)\n",
-    "\n",
-    "```{note}\n",
-    "This notebook was inspired by the material in [this notebook by James McCreight](https://github.com/NCAR/rechunk_retro_nwm_v21/blob/main/notebooks/usage_example_rerechunk_chrtout.ipynb), and [the Rechunker Tutorial](https://rechunker.readthedocs.io/en/latest/tutorial.html).\n",
-    "```"
+    "5. [Confirm the proper creation of the `zarr` store by `Rechunker`](WriteChunkedFiles.ipynb)"
    ]
   },
   {
