--- a/101/WriteChunkedFiles.ipynb
+++ b/101/WriteChunkedFiles.ipynb
@@ -2,17 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3fbee3f6-ae04-411e-88ba-dc0b39f195d1",
+   "id": "bd95288c-1388-4732-9626-ca4014335d66",
    "metadata": {},
    "source": [
-    "# Writing Chunked Files\n",
-    "\n",
-    "The goal of this notebook is to learn how to load a collection of `netcdf` files, chunk the data, write the data in `zarr` format, and confirm the proper creation of the `zarr` store.\n",
-    "We will be writing to our local storage for simplicity (as this is just a tutorial notebook), but you can easily change the output path to be anywhere including cloud storage.\n",
-    "\n",
-    "```{note}\n",
+    "# Writing Chunked Files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2240372-1697-4083-873b-d5b25653a2d0",
+   "metadata": {},
+   "source": [
+    "::::{margin}\n",
+    ":::{note}\n",
     "This notebook is based on the [Xarray User-guide for reading and writing Zarr](https://docs.xarray.dev/en/stable/user-guide/io.html#zarr).\n",
-    "```"
+    ":::\n",
+    "::::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9262bf36-4d8b-4b1d-9d7c-6730462cf7a6",
+   "metadata": {},
+   "source": [
+    "The goal of this notebook is to learn how to load a collection of `netcdf` files, chunk the data, write the data in `zarr` format, and confirm the proper creation of the `zarr` store.\n",
+    "We will be writing to our local storage for simplicity (as this is just a tutorial notebook), but you can easily change the output path to be anywhere including cloud storage."
    ]
   },
   {
