--- a/101/Rechunking.ipynb
+++ b/101/Rechunking.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "## Read in a Zarr Store\n",
     "\n",
-    "For the dataset in this tutorial, we will use the data from the National Water Model Reanalysis Version 2.1.\n",
+    "For the dataset in this tutorial, we will use the data from the National Water Model Retrospective Version 2.1.\n",
     "The full dataset is part of the [AWS Open Data Program](https://aws.amazon.com/opendata/), available via the S3 bucket at: `s3://noaa-nwm-retro-v2-zarr-pds/`.\n",
     "\n",
     "As this is a `zarr` store, we can easily read it in directly with [`xarray.open_dataset()`](https://docs.xarray.dev/en/stable/generated/xarray.open_dataset.html), including the keyword `chunks={}` to make sure it loads the data with `dask` using the stored chunks' shape and size."
@@ -348,7 +348,7 @@
    "source": [
     "## Confirm the Creation of the Zarr Store by Rechunker\n",
     "\n",
-    "Let's read in the resulting re-chunked dataset to to confirm it turned out how we intended."
+    "Let's read in the resulting re-chunked dataset to confirm it turned out how we intended."
    ]
   },
   {
