--- a/101/BasicsShapeSize.ipynb
+++ b/101/BasicsShapeSize.ipynb
@@ -379,7 +379,7 @@
     "\n",
     "Additionally, all of the information provided here does not discuss proper optimization of chunk shape and size.\n",
     "Proper optimization would attempt to select chunk sizes that are near powers of two (i.e., $2^N$) to facilitate optimal storage and disk retrieval.\n",
-    "Details on this topic can be found in the advanced topic notebook of [Optimization of Chunks Shape and Size]()."
+    "Details on this topic can be found in the advanced topic notebook of [Choosing an Optimal Chunk Size and Shape](../201/OptimalChunkSelection.ipynb)."
    ]
   }
  ],
@@ -399,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
