--- a/101/Rechunking.ipynb
+++ b/101/Rechunking.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "## Read in a Zarr Store\n",
     "\n",
-    "For the dataset in this tutorial, we will use the data from the National Water Model Retrospective Version 2.1.\n",
+    "For the dataset in this tutorial, we will use the data from the National Water Model Reanalysis Version 2.1.\n",
     "The full dataset is part of the [AWS Open Data Program](https://aws.amazon.com/opendata/), available via the S3 bucket at: `s3://noaa-nwm-retro-v2-zarr-pds/`.\n",
     "\n",
     "As this is a `zarr` store, we can easily read it in directly with [`xarray.open_dataset()`](https://docs.xarray.dev/en/stable/generated/xarray.open_dataset.html), including the keyword `chunks={}` to make sure it loads the data with `dask` using the stored chunks' shape and size."
@@ -149,12 +149,10 @@
     "bytes_per_value = ds.streamflow.dtype.itemsize\n",
     "total_bytes = streamflow_chunk_plan['time'] * streamflow_chunk_plan['feature_id'] * bytes_per_value\n",
     "streamflow_MiB = total_bytes / (2 ** 10) ** 2\n",
-    "partial_chunks = {'time': ntime -  streamflow_chunk_plan['time'] * (ntime / streamflow_chunk_plan['time']),\n",
-    "                  'feature_id': nfeature -  streamflow_chunk_plan['feature_id'] * (nfeature / streamflow_chunk_plan['feature_id']),}\n",
     "print(\"STREAMFLOW \\n\"\n",
     "      f\"Chunk of shape {streamflow_chunk_plan} \\n\"\n",
-    "      f\"Partial 'time' chunk remainder: {partial_chunks['time']} ({partial_chunks['time']/streamflow_chunk_plan['time']:.3f}% of a chunk)\\n\"\n",
-    "      f\"Partial 'feature_id' chunk remainder: {partial_chunks['feature_id']} ({partial_chunks['feature_id']/streamflow_chunk_plan['feature_id']:.3f}% of a chunk)\\n\"\n",
+    "      f\"Partial 'time' chunk remainder: {ntime / (ntime / streamflow_chunk_plan['time']) - streamflow_chunk_plan['time']} \\n\"\n",
+    "      f\"Partial 'feature_id' chunk remainder: {nfeature / (nfeature / streamflow_chunk_plan['feature_id']) - streamflow_chunk_plan['feature_id']} \\n\"\n",
     "      f\"Chunk size: {streamflow_MiB:.2f} [MiB] \\n\")\n",
     "\n",
     "chunks_per_dim = 3\n",
@@ -162,12 +160,10 @@
     "bytes_per_value = ds.velocity.dtype.itemsize\n",
     "total_bytes = velocity_chunk_plan['time'] * velocity_chunk_plan['feature_id'] * bytes_per_value\n",
     "velocity_MiB = total_bytes / (2 ** 10) ** 2\n",
-    "partial_chunks = {'time': ntime -  velocity_chunk_plan['time'] * chunks_per_dim,\n",
-    "                  'feature_id': nfeature -  velocity_chunk_plan['feature_id'] * chunks_per_dim,}\n",
     "print(\"VELOCITY \\n\"\n",
     "      f\"Chunk of shape {velocity_chunk_plan} \\n\"\n",
-    "      f\"Partial 'time' chunk remainder: {partial_chunks['time']} ({partial_chunks['time']/velocity_chunk_plan['time']:.3f}% of a chunk)\\n\"\n",
-    "      f\"Partial 'feature_id' chunk remainder: {partial_chunks['feature_id']} ({partial_chunks['feature_id']/velocity_chunk_plan['feature_id']:.3f}% of a chunk)\\n\"\n",
+    "      f\"Partial 'time' chunk remainder: {ntime / chunks_per_dim - velocity_chunk_plan['time']} \\n\"\n",
+    "      f\"Partial 'feature_id' chunk remainder: {nfeature / chunks_per_dim - velocity_chunk_plan['feature_id']} \\n\"\n",
     "      f\"Chunk size: {velocity_MiB:.2f} [MiB]\")"
    ]
   },
@@ -194,12 +190,10 @@
     "bytes_per_value = ds.streamflow.dtype.itemsize\n",
     "total_bytes = streamflow_chunk_plan['time'] * streamflow_chunk_plan['feature_id'] * bytes_per_value\n",
     "streamflow_MiB = total_bytes / (2 ** 10) ** 2\n",
-    "partial_chunks = {'time': ntime -  streamflow_chunk_plan['time'] * (ntime / streamflow_chunk_plan['time']),\n",
-    "                  'feature_id': nfeature -  streamflow_chunk_plan['feature_id'] * (nfeature / streamflow_chunk_plan['feature_id']),}\n",
     "print(\"STREAMFLOW \\n\"\n",
     "      f\"Chunk of shape {streamflow_chunk_plan} \\n\"\n",
-    "      f\"Partial 'time' chunk remainder: {partial_chunks['time']} ({partial_chunks['time']/streamflow_chunk_plan['time']:.3f}% of a chunk)\\n\"\n",
-    "      f\"Partial 'feature_id' chunk remainder: {partial_chunks['feature_id']} ({partial_chunks['feature_id']/streamflow_chunk_plan['feature_id']:.3f}% of a chunk)\\n\"\n",
+    "      f\"Partial 'time' chunk remainder: {ntime / (ntime / streamflow_chunk_plan['time']) - streamflow_chunk_plan['time']} \\n\"\n",
+    "      f\"Partial 'feature_id' chunk remainder: {nfeature / (nfeature / streamflow_chunk_plan['feature_id']) - streamflow_chunk_plan['feature_id']} \\n\"\n",
     "      f\"Chunk size: {streamflow_MiB:.2f} [MiB] \\n\")"
    ]
   },
