--- a/AWS.ipynb
+++ b/AWS.ipynb
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1117a21a-b7f7-4374-a5bd-15bca24c11a1",
+   "execution_count": 10,
+   "id": "858d22f3-065c-41d3-8974-06afc7ada04c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,9 @@
     "    os.path.expanduser('~/.aws/credentials') \n",
     "    # default location... if yours is elsewhere, change this.\n",
     ")\n",
-    "_profile_nm  = os.environ.get('AWS_PROFILE', 'osn-rsignellbucket2')\n",
-    "_endpoint = os.environ.get('AWS_S3_ENDPOINT', 'https://renc.osn.xsede.org')\n",
+    "_profile_nm  = os.environ.get('AWS_PROFILE', 'osn-hytest-scratch')\n",
+    "_endpoint = os.environ.get('AWS_S3_ENDPOINT', 'https://usgs.osn.mghpcc.org/')\n",
+    "\n",
     "# Set environment vars based on parsed awsconfig\n",
     "try:\n",
     "    os.environ['AWS_ACCESS_KEY_ID']     = awsconfig[_profile_nm]['aws_access_key_id']\n",
@@ -53,14 +54,6 @@
    "source": [
     "It is extremely important that you **never** set any of the access keys or secrets directly -- we never want to include any of those values as string literals in any code.  This code is committed to a public repository, so doing this would essentially publish those secrets.  **ALWAYS** parse the config file as demonstrated above in order to obtain the access key and the secret access key. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f473e813-dfff-4e91-a87c-bf7f74a414e8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -79,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
